--- a/index.html
+++ b/index.html
@@ -6,8 +6,15 @@
     <title> Recipes </title>
 </head>
 <body>
-    <h1> Marin's Favorite Recipes </h1>
-    <a href="recipes/apple-pie.html">Apple Pie</a>
+    <h1> Desserts:</h1>
+    <img src="./images/mokapot art.webp"width="400" 
+    height="500" />
+    <h2> Marin's Favorite Recipes </h2>
+    <ul>
+    <li><a href="recipes/apple-pie.html">Apple Pie</a></li>
+    <li><a href="recipes/strawberry-rhubarb-crisp.html">Strawberry Rhubarb Crisp</a></li>
+    <li><a href="recipes/blueberry-cobbler.html">Blueberry Cobbler</a></li>
+    </ul>
 </body>
 
 </html>
