added a return to main page

--- a/recipes/apple-pie.html
+++ b/recipes/apple-pie.html
@@ -5,7 +5,7 @@
         <title> Grandma's Apple Pie</title>
     </head>
     <body>
-    <h1> Geandma's Apple Pie </h1>
+    <h1>Apple Pie </h1>
 
     <img src="../images/Apple-pie-5.jpeg"width="400" 
     height="500"/>
@@ -30,5 +30,7 @@
         <li>Roll second crust into an 11" round and cut into 10 even thickness strips using a pizza cutter. Arrange strips in a woven lattice pattern over the top (see video tutorial). Beat together 1 egg and 1 Tbsp water and brush the top with egg mixture.</li>
         <li>Bake at 425˚F in the center of the oven for 15 minutes. Reduce the heat to 350˚F and continue baking another 45 minutes or until apples are soft and filling is bubbling through the vents.* Rest at room temp 1 hour before serving.</li>
     </ol>
+    <a href="../index.html">Return to Main Page </a>
+
 </body>
 </html>
