--- a/recipes/strawberry-rhubarb-crisp.html
+++ b/recipes/strawberry-rhubarb-crisp.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <h1>Mom's Strawberry Rhubarb Crisp</h1>
+        <h1>Strawberry Rhubarb Crisp</h1>
         <img src="../images/Baked-Strawberry.webp"width="400" 
         height="500" />
 
@@ -38,5 +38,7 @@
             <li>In the bowl of a food processor, combine the flour, brown sugar, granulated sugar and salt. Process until well combined, about 30 seconds. Add the cold butter and pulse until the mixture resembles coarse crumbs, with a few pea-sized clumps of butter within. Transfer to a medium bowl and stir in the oats and chopped pecans.</li>
             <li>Spoon the topping evenly over the fruit without packing down. Bake for 45-55 minutes, until the fruit is bubbling around the edges and the topping is golden brown. Cool for 20 minutes before serving. Spoon into shallow bowls and serve with vanilla ice cream.</li>
         </ol>
+
+        <a href="../index.html">Return to Main Page </a>
     </body>
 </html>
