--- a/recipes/blueberry-cobbler.html
+++ b/recipes/blueberry-cobbler.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <h1>Dad's Favorite Blueberry Cobbler</h1>
+        <h1>Blueberry Cobbler</h1>
         <img src="../images/Blueberrycobbler.webp"width="400" 
         height="500" />
 
@@ -33,5 +33,6 @@
             <li>Drop spoonfuls of batter over the blueberry mixture, covering as much filling as possible.</li>
             <li>Bake in the preheated oven until topping is golden brown and filling bubbles, 35 to 40 minutes.</li>
         </ol>
+        <a href="../index.html">Return to Main Page </a>
     </body>
 </html>
