added description to images

--- a/recipes/apple-pie.html
+++ b/recipes/apple-pie.html
@@ -7,7 +7,7 @@
     <body>
     <h1>Apple Pie </h1>
 
-    <img src="../images/Apple-pie-5.jpeg"width="400" 
+    <img src="../images/Apple-pie-5.jpeg" alt="image of Apple pie" width="400" 
     height="500"/>
 
     <p>Classic Apple Pie Recipe with an irresistible homemade apple pie filling. From the best flaky pie crust to the generous saucy center, this recipe always gets glowing reviews. This is the pie everyone has to make for Thanksgiving</p>
