--- a/recipes/blueberry-cobbler.html
+++ b/recipes/blueberry-cobbler.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Blueberry Cobbler</h1>
-        <img src="../images/Blueberrycobbler.webp"width="400" 
+        <img src="../images/Blueberrycobbler.webp"alt="image of blueberry cobbler" width="400" 
         height="500" />
 
         <h3>Ingredients</h3>
