added description to images

--- a/recipes/strawberry-rhubarb-crisp.html
+++ b/recipes/strawberry-rhubarb-crisp.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Strawberry Rhubarb Crisp</h1>
-        <img src="../images/Baked-Strawberry.webp"width="400" 
+        <img src="../images/Baked-Strawberry.webp" alt="image of strawberry rhubarb" width="400" 
         height="500" />
 
         <h3>Ingredients</h3>
