added CSS to HTML

--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
 
     <meta charset="utf-8">
     <title> Recipes </title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <h1> Desserts:</h1>
-    <img src="./images/mokapot art.webp"width="400" 
+    <img class = "block" src="./images/mokapot art.webp" alt="pot image" width="400" 
     height="500" />
     <h2> Marin's Favorite Recipes </h2>
+    <div id="contents" class="block"></div>
     <ul>
-    <li><a href="recipes/apple-pie.html">Apple Pie</a></li>
-    <li><a href="recipes/strawberry-rhubarb-crisp.html">Strawberry Rhubarb Crisp</a></li>
-    <li><a href="recipes/blueberry-cobbler.html">Blueberry Cobbler</a></li>
+    <li class="recipe"><a href="recipes/apple-pie.html">Apple Pie</a></li>
+    <li class="recipe"><a href="recipes/strawberry-rhubarb-crisp.html">Strawberry Rhubarb Crisp</a></li>
+    <li class="recipe"><a href="recipes/blueberry-cobbler.html">Blueberry Cobbler</a></li>
     </ul>
 </body>
 
